GNOME Bugzilla – Bug 727928
gapplication-tool fixes
Last modified: 2014-04-10 16:17:32 UTC
See attached patches - the latter is more important because it prevents launching of apps that use hyphens in their ID through the gapplication tool.
Created attachment 273950 [details] [review] gapplication-tool: fix a typo This must have never worked.
Created attachment 273951 [details] [review] gapplication-tool: ensure object paths are valid Hyphens are not valid characters for DBus object paths; see the similar code in gapplicationimpl-dbus.c
Review of attachment 273950 [details] [review]: obviously correct.
Review of attachment 273951 [details] [review]: If this matches the other behaviour, then please go ahead.
Attachment 273950 [details] pushed as 59d1187 - gapplication-tool: fix a typo Attachment 273951 [details] pushed as 9fe9a67 - gapplication-tool: ensure object paths are valid Thanks, I pushed these to master and glib-2-40.