gapplication-tool: fix a typo

This must have never worked.

https://bugzilla.gnome.org/show_bug.cgi?id=727928