gio/gapplication-tool.c
@@ -293,7 +293,7 @@ app_get_platform_data (void)
 
   g_variant_builder_init (&builder, G_VARIANT_TYPE_VARDICT);
 
-  if ((startup_id = g_getenv ("DESKTOP_STARTUP_iD")))
+  if ((startup_id = g_getenv ("DESKTOP_STARTUP_ID")))
     g_variant_builder_add (&builder, "{sv}", "desktop-startup-id", g_variant_new_string (startup_id));
 
   return g_variant_builder_end (&builder);
